stylings and spacing issues

--- a/development/style.scss
+++ b/development/style.scss
@@ -9,7 +9,7 @@ $gray-trans: rgba(144, 144, 144, .2);
 $dark-trans: rgba(0, 0, 0, 0.1);
 $dark-trans-deg: rgba(0, 0, 0, 0.2);
 $dark-trans-mid: rgba(0, 0, 0, 0.5);
-$dark-trans-opq: rgba(0, 0, 0, 0.8);
+$dark-trans-opq: rgba(0, 0, 0, 0.95);
 $black: #000;
 $transparent: rgba(0, 0, 0, 0);
 $teal: #0e2e3b;
@@ -23,7 +23,7 @@ $manila: #ecc76f;
 
 body {
   margin: 0;
-  font-family: Ubuntu;
+  font-family: Valera;
   -webkit-user-select: none;
 }
 
@@ -344,7 +344,7 @@ button#trash {
 
   ul {
     clear: both;
-    font-size: 10px;
+    font-size: 12px;
     color: $white;
 
     ul {
@@ -518,7 +518,7 @@ button#trash {
     cursor: pointer;
     clear: both;
     font-size: 10px;
-    font-family: Ubuntu;
+    font-family: Valera;
     line-height: 1.42857143;
     white-space: nowrap;
   }
